Add style to the app

--- a/src/style.module.css
+++ b/src/style.module.css
@@ -1,17 +1,47 @@
 .app,
 .display,
 .buttonpannel {
-  width: 800px;
+  width: 700px;
+  display: flex;
+  flex-direction: column;
   margin-left: 20%;
-  padding-right: 100px;
+
 }
 
 .display {
   margin-right: 100px;
   background-color: gray;
-  width: 400px;
-  margin-bottom: 0;
-  padding-bottom: 0;
-  overflow: hidden;
-  height: 70px;
+  height: 100px;
+  font-family: 'Courier New', Courier, monospace;
+  color: white;
+  font-style: bold;
+  text-align: right;
+  padding-right: 5%;
+  padding-top: 3%;
+}
+
+.buttonpannel div
+{
+  height: 100px;
+}
+
+.button{
+width: 25%;
+height: 100px;
+text-align: center;
+color: black;
+border: 1;
+}
+.color1
+{
+  background-color: orange;
+}
+.white
+{
+  background-color: white;
+}
+
+.wide
+{
+  width: 50%;
 }
