--- a/src/style.module.css
+++ b/src/style.module.css
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   margin-left: 20%;
-
 }
 
 .display {
@@ -14,34 +13,51 @@
   height: 100px;
   font-family: 'Courier New', Courier, monospace;
   color: white;
-  font-style: bold;
   text-align: right;
   padding-right: 5%;
   padding-top: 3%;
 }
 
-.buttonpannel div
-{
+.buttonpannel div {
   height: 100px;
 }
 
-.button{
-width: 25%;
-height: 100px;
-text-align: center;
-color: black;
-border: 1;
+.button {
+  width: 25%;
+  height: 100px;
+  text-align: center;
+  color: black;
+  border-color: gray;
+  border-radius: initial;
 }
-.color1
-{
+
+.color1 {
   background-color: orange;
 }
-.white
-{
+
+.white {
   background-color: white;
 }
 
-.wide
-{
+.wide {
   width: 50%;
+}
+
+nav {
+  background-color: black;
+  height: 50px;
+}
+
+.links {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  list-style: none;
+  color: azure;
+}
+
+p {
+  margin-left: 100px;
+  margin-right: 100px;
+  padding-top: 100px;
 }
